2004-12-29  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddSongWindow.cs:
	* src/CoverImage.cs:
	* src/FileUtils.cs:
	* src/PlaylistWindow.cs:
	* src/StringUtils.cs:

	Move URI conversion functions from StringUtils to FileUtils.
	
	* src/Song.cs:
	* src/SongDatabase.cs:

	Replace setting song.Dead to true with song.Kill ().

2004-12-29  Tamara Roberson  <foxxygirltamara@gmail.com>
            Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:
	* src/Database.cs:
	R src/DatabaseUtils.cs:
	
	Replaced DatabaseUtils with Database -- a more OO approach.
	
	* CoverDatabase.cs:
	* SongDatabase.cs:
		
	Renamed EncodeFunc to EncodeFunction.
	Renamed DecodeFunc to DecodeFunction.
	Removed 'user_data' parameter from DecodeFunction.
	
	* CoverDatabase.cs:
	* Song.cs:
	* SongDatabase.cs:
	
	Updated to reflect move to Database.

2004-12-29  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.7.1.99.
	
	* src/MmKeys.cs:

	Use SignalUtils.SignalDelegate instead of SignalDelegateInt.

2004-12-28  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Release 0.7.1.

2004-12-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/MmKeys.cs:

	Keep handles to the delegates being passed into the unmanaged world.

2004-12-28  Jorn Baayen  <jbaayen@gnome.org>

	* src/Muine.cs:

	Tiny cleanup: refer to db instead of DB within the Muine class.

2004-12-28  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/CoverDatabase.cs:
	* src/DatabaseUtils.cs:
	* src/Makefile.am:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Split off database code to DatabaseUtils.cs.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-gst.c: (player_construct), (tick_timeout),
	(iterate_cb):

	Separate timeout for tick signals.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverImage.cs:
	* src/PlaylistWindow.cs:
	* src/StringUtils.cs:

	Clean up SelectionData handling.

2004-12-27  Jorn Baayen  <jbaayen@gnome.org>
